[tool.poetry]
name = "p-web-2-9"
version = "0.1.0"
description = ""
authors = ["Hlushchenko"]
readme = "README.md"
packages = [{include = "p"}]

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.7.1"
black = "^22.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
